--- a/app/src/main/res/layout/admin_task_list.xml
+++ b/app/src/main/res/layout/admin_task_list.xml
@@ -19,16 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/admin_room_name"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:layout_toLeftOf="@+id/admin_checkBox"
-            android:layout_toStartOf="@+id/admin_checkBox" />
-
-        <CheckBox
-            android:text="Select All"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/admin_checkBox"
-            android:layout_alignParentRight="true"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
     </RelativeLayout>
 
     <CheckBox
